--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Kviz</string>
+    <string name="about_app">Demo aplikacija razvijena za potrebe Mobilnog programiranja
+
+Dante, ‘22</string>
 </resources>
